<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/red"
    tools:context=".DangKy2Activity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="227dp"
            android:layout_height="80dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="1dp"
            android:background="@drawable/border_radius_left"
            android:fontFamily="@font/ribeye"
            android:gravity="center"
            android:text="COOKING"
            android:textColor="@color/red"
            android:textSize="36dp" />

        <ImageView
            android:id="@+id/vIcon"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginLeft="22dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/border_radius"
            android:src="@drawable/chefhat" />

        <RelativeLayout
            android:id="@+id/txtUserPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/vIcon"
            android:gravity="center"
            android:layout_marginTop="30dp">

            <LinearLayout
                android:id="@+id/panelName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerHorizontal="true">
                <EditText
                    android:id="@+id/txtLastName"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:background="@drawable/border_radius_5dp"
                    android:hint="@string/lastname"
                    android:paddingLeft="10dp"
                    android:layout_centerHorizontal="true"
                    android:textColorHint="@color/grey" />

                <EditText
                    android:id="@+id/txtFirstName"
                    android:layout_width="185dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="45dp"
                    android:background="@drawable/border_radius_5dp"
                    android:hint="@string/firstname"
                    android:paddingLeft="10dp"
                    android:layout_centerHorizontal="true"
                    android:textColorHint="@color/grey" />
            </LinearLayout>

            <EditText
                android:id="@+id/txtDoB"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_below="@+id/panelName"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/border_radius_5dp"
                android:hint="@string/doB"
                android:paddingLeft="10dp"
                android:textColorHint="@color/grey" />

            <EditText
                android:id="@+id/txtSDT"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_below="@+id/txtDoB"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/border_radius_5dp"
                android:hint="@string/sdt"
                android:paddingLeft="10dp"
                android:textColorHint="@color/grey" />

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_below="@+id/txtSDT"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/border_radius_5dp"
                android:hint="@string/email"
                android:paddingLeft="10dp"
                android:textColorHint="@color/grey" />

            <TextView
                android:id="@+id/rule"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtEmail"
                android:layout_marginTop="15dp"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/rule"
                android:textColor="#B3FFFFFF" />

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_below="@+id/rule"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:background="@drawable/rounded_corner_20dp"
                android:backgroundTint="@color/white"
                android:shadowColor="@color/grey"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="1.5"
                android:text="ĐĂNG KÝ"
                android:textColor="@color/red"
                android:textSize="20dp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtUserPass"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="45dp"
            android:gravity="center">
            <!--            android:layout_alignParentStart="true"-->
            <!--            android:layout_alignParentEnd="true"-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Đã có tài khoản?"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/red"
                android:stateListAnimator="@null"
                android:text="Đăng nhập"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>